LLD bug fixed