@@ -46,6 +46,6 @@ public class GuitarString {
 
     /* Return the double at the front of the buffer. */
     public double sample() {
-        return buffer.getLast();
+        return buffer.get(buffer.size() - 1);
     }
 }
